# uc-intg-plex

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  docker-entry.sh  driver.json  pyproject.toml  requirements.txt
.github/workflows/: build.yml
dev/: Dockerfile  docker-compose.yml
docs/: code_guidelines.md
intg-plex/: config.py  const.py  driver.json  driver.py  media_player.py  plex.py  remote.py  setup.py
