[project]
name = "uc-intg-plex"
version = "1.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
"ucapi==0.4.0",
"ucapi-framework==1.0.1",
"aiohttp==3.9.3",
"plexapi==4.16.1",
"plexwebsocket==0.0.14",
"pillow==11.1.0",
"pyee>=9.0",
"pydantic"]
