[project]
name = "uc-intg-plex"
version = "1.0.0"
description = "A Python integration for Plex, providing APIs and tools to interact with Plex media servers, including support for real-time events, media management, and user authentication."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
"ucapi>=0.4.0,<0.5.0",
"ucapi-framework>=1.0.1,<2.0.0",
"aiohttp>=3.9.3,<4.0.0",
"plexapi>=4.17.2,<5.0.0",
"plexwebsocket>=0.0.14,<0.1.0",
"pillow>=11.1.0,<12.0.0",
"pyee>=9.0",
"pydantic"]
